--- a/Assignment 1 - Data.ipynb
+++ b/Assignment 1 - Data.ipynb
@@ -173,9 +173,7 @@
     }
    ],
    "source": [
-    "# Feature 1\n",
-    "\n",
-    "\n",
+    "# Feature 2\n",
     "\n",
     "# extract relevant data from the ruter dataset\n",
     "dataframe = dataframe[['Område', 'Holdeplass_Fra']]\n",
@@ -238,6 +236,7 @@
     }
    ],
    "source": [
+    "# Feature 3\n",
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns\n",
     "import pandas as panda\n",
@@ -245,7 +244,6 @@
     "# Reading the csv file\n",
     "dataframe = panda.read_csv(\"Ruter_data.csv\")\n",
     "\n",
-    "# //////// FEATURE AND VIZULIZATION 1 \n",
     "# Comparing the capasity of the buses to the number of people embarking/disembarking the bus\n",
     "\n",
     "\n",
@@ -291,7 +289,7 @@
     }
    ],
    "source": [
-    "# //////// FEATURE AND VIZULIZATION 2\n",
+    "# feature 4\n",
     "# Now we will attempt to see at what time on 13.06.20 \n",
     "# the most people were on the bus (using 'Tidspunkt_Faktisk_Avgang_Holdeplass_Fra')\n",
     "\n",
@@ -336,7 +334,7 @@
     }
    ],
    "source": [
-    "# Feature 3\n",
+    "# Feature 5\n",
     "# Interested in finding which stop has the most people aboard the bus on 13th june\n",
     "# we will use holdeplass_fra\n",
     "\n",
@@ -361,46 +359,6 @@
     "\n",
     "# Here we see that the stop 'Kringler Gamle Skole' had the most people board on that day"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4063    False\n",
-       "4295    False\n",
-       "Name: Dato, dtype: bool"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dato = dataframe[['Dato', 'Passasjerer_Ombord']]\n",
-    "\n",
-    "dato = (dato['Dato'][3:5] == '08')\n",
-    "\n",
-    "dato.head(25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
